--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body {
 
 nav {
   position: fixed;
-  width: 100vw;
+  max-width: 100vw;
+  width: 100%;
+  background: red;
   top: 0;
   left: 0;
   z-index: 1;
@@ -116,7 +118,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
   font-weight: 400;
   font-size: 6rem;
   line-height: 10rem;
-  font-weight: 700;
+  font-weight: 300;
   color: #fff;
   text-align: center;
 }
@@ -148,6 +150,9 @@ header .logo:focus, header .logo a:focus, header img:focus{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#icon-arrow:focus{
+  display: none;
 }
 
 .arrow {
@@ -712,7 +717,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
 
 .contact {
   display: flex;
-  min-height: 90vh;
+  min-height: 94.35vh;
   max-width: 100%;
   margin: auto;
   font-family: 'Lato', sans-serif;
@@ -725,31 +730,31 @@ header .logo:focus, header .logo a:focus, header img:focus{
   justify-content: space-around;
   align-items: center;
   height: 70.5rem;
-  max-width: 55%;
+  max-width: 100%;
 }
 
 .contact-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 20rem;
-  max-width: 70%;
+  height: 20vh;
+  max-width: 90%;
   margin-top: 10rem;
 }
 
 .contact-header-title {
   text-align: center;
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
 }
 
 .contact-header-intro {
   font-size: 1.8rem;
   line-height: 25px;
-  width: 100%;
+  width: 80%;
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 15px;
 }
 
 .contact-button {
@@ -777,8 +782,9 @@ header .logo:focus, header .logo a:focus, header img:focus{
   display: flex;
   flex-direction: column;
   margin-top: 5rem;
-  height: 24rem;
-  width: 30rem;
+  height: 140px;
+  max-width: 90%;
+  width: 33%;
 }
 
 .contact-coordinates {
@@ -787,6 +793,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .contact-coordinates h3 {
