--- a/css/style.css
+++ b/css/style.css
@@ -19,76 +19,108 @@ body {
             *** NAVIGATION ***
 **********************************************/
 
-nav {
+.toggle-btn {
   position: fixed;
-  max-width: 100vw;
-  width: 100%;
-  background: red;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background: #31859bff;
-  transition: 0.3s ease-in-out;
-  -webkit-transition: 0.3s ease-in-out;
-  -moz-transition: 0.3s ease-in-out;
-  -ms-transition: 0.3s ease-in-out;
-  -o-transition: 0.3s ease-in-out;
-}
-
-nav.hide {
-  top: -70px;
-}
-
-header {
-  display: flex;
-}
-header .logo {
+  margin: 1.4em;
+  padding: 1em;
   width: 50px;
-  height: 50px;
-  margin: 1rem 4rem;
+  height: 35px;
+  top: 2rem;
+  right: 5rem;
+  z-index: 13;
+}
+
+span.one {
   position: absolute;
-  border: none;
+  width: 40px;
+  height: 2px;
+  background: #fff;
 }
 
-header .logo img{
+span.two {
   position: absolute;
-  width: 80px;
-  height: auto;
-  top: -1rem;
-  left: -1rem;
-  border: none;
-  cursor: pointer;
+  width: 40px;
+  height: 2px;
+  background: #fff;
+  margin-top: 12px;
 }
 
-header .logo:focus, header .logo a:focus, header img:focus{
-  display: none;
+.menu {
+  z-index: 12;
+  position: absolute;
+  background: #9c9895;
+  height: 100vh;
+  width: 100%;
+  top: -100%;
 }
 
-.nav-wrapper {
-  flex-grow: 1;
-  max-width: 90%;
-  margin: 2rem auto;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.data {
+  padding: 8em 0 0 2em;
+  text-align: center;
 }
 
-.nav-wrapper > * {
-  margin-left: 10px;
-  margin-right: 10px;
-  font-size: 1.5rem;
+ul {
+  list-style: none;
+  z-index: 11;
+  margin-top: 90px;
 }
-.nav-wrapper a{
+
+li{
+  color: #31859bff;
+  font-size: 7rem;
+  margin-top: 40px;
+}
+
+a {
   text-decoration: none;
-  margin: auto 4rem;
+  color: #31859bff;
   font-family: 'Cabin', sans-serif;
-  font-size: 3rem;
-  color: #000;
 }
+
+.borderLeft {
+  display: inline-block;
+  position: relative;
+
+}
+
+.borderLeft::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2.5px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transform-origin: bottom right;
+  transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.borderLeft:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 
 /**********************************************
             *** HOME SECTION *** - START
 **********************************************/
+
+.logo{
+  margin: 10px 45px;
+  height: 90px;
+  width: 90px;
+}
+
+.logo-home:focus{
+  display: none;
+}
+
+.logo img{
+  height: 100%;
+  width: 100%;
+}
+
 .home {
   height: 100vh;
   display: flex;
@@ -104,6 +136,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 11;
 }
 
 .hero-text h1 {
@@ -145,7 +178,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
   border-radius: 50%;
   background: white;
   box-shadow: 0 0 0 0 #fff;
-  z-index: 9;
+  z-index: 11;
   animation: pulse 1.9s infinite;
   display: flex;
   justify-content: center;
@@ -166,6 +199,12 @@ header .logo:focus, header .logo a:focus, header img:focus{
     box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.01);
   }
 }
+
+.is-visible {
+  opacity: 0;
+  pointer-events: auto;
+}
+
 
 /**********************************************
             *** HOME SECTION *** - END
