--- a/css/mq.css
+++ b/css/mq.css
@@ -2,256 +2,364 @@
             *** RESPONSIVE *** 
 **********************************************/
 
-@media screen and (max-width: 992px) {
-    .banner{
-        max-width: 100vw;
+@media only screen and (min-width: 112.5em) {}
+
+@media only screen and (max-width: 75em) {
+    .container {}
+
+    /**********************************************
+            *** NAVIGATION ***
+**********************************************/
+
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 2.5rem;
     }
-  /* NAVIGATION */
 
-  nav {
-      height: 5rem;
-      width: 100vw;
-  }
+    .navigation__item {
+        padding: 1rem 1.5rem;
+    }
 
-  header .logo {
-      width: 2rem;
-      height: 2rem;
-      top: 0.4rem;
-      left: -2.8rem;
-      border: none; 
-  }
+    .navigation__link {
+        font-size: 2rem;
+        font-weight: 300;
+    }
 
-  header .logo img {
-      width: 5rem;
-  }
+    /**********************************************
+            *** HOME SECTION *** - START
+**********************************************/
 
-  .nav-wrapper>* {
-      margin: 0;
-  }
+    .hero-text h1 {
+        font-size: 8rem;
+    }
 
-  .nav-wrapper a {
-      font-size: 3rem;
-      margin: auto 0.5rem;
-  }
+    .hero-text h2 {
+        font-size: 4.5rem;
+        line-height: 1rem;
+    }
 
-  .hero-text h1 {
-      font-size: 4rem;
-  }
+    .hero-text img {
+        width: 4rem;
+    }
 
-  .hero-text h2 {
-      font-size: 3rem;
-      line-height: 5rem;
-      margin-bottom: 45px;
-      font-weight: 300;
-  }
+    .contact-illustration {
+        display: none;
+    }
+}
 
-  .hero-text img {
-      width: 3.5rem;
-      cursor: pointer;
-      margin-bottom: 1rem;
-  }
+@media only screen and (max-width: 70em) {
 
-  #icon-arrow {
-      width: 4.5rem;
-      height: auto;
-      bottom: 10rem;
-  }
+    .hero-text h2 {
+        font-size: 3.5rem;
+        line-height: 5rem;
+        background: red;
+    }
+}
 
-  .arrow {
-      width: 2rem;
-      height: 4rem;
+@media only screen and (max-width: 56.25em) {
+    .container {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 
-  }
+    /**********************************************
+            *** NAVIGATION ***
+**********************************************/
 
-  @media (max-width: 1023px) {
-      .about-illustration img {
-          width: 60vw;
-      }
+    .navigation {}
 
-      .about {
-          flex-wrap: wrap;
-      }
-  }
+    .navigation__logo {
+        font-size: 2.5rem;
+    }
 
-  @media (max-width: 768px) {
-      .skill {
-          flex-direction: column-reverse;
-      }
+    .navigation__item {
+        padding: 1rem 1rem;
+    }
 
-      .project-portfolio {
-          flex-wrap: wrap;
-      }
-  }
+    .navigation__link {
+        font-size: 1.5rem;
+        font-weight: 300;
+    }
 
-  @media (max-width: 425px) {
+    /**********************************************
+            *** HOME SECTION *** - START
+**********************************************/
+    .hero-text h1 {
+        font-size: 7rem;
+        line-height: 8rem;
+    }
 
-      .about-illustration img{
-          width: 25rem;
-          margin-top: -1.5rem;
-      }
-      .about-content h1{
-          font-size: 2.5rem;
-          width: 38rem;
-      }
-      .about-content p{
-          font-size: 1.5rem;
-          width: 32rem;
-          line-height: 2.5rem;
-          font-weight: 300;
-      }
-      .box-social img{
-          width: 3.5rem;
-      }
-      .about-btn a{
-          font-size: 1rem;
-          text-align: center;
-          margin: 0.5rem;
-      }
+    .hero-text h2 {
+        font-size: 3.5rem;
+        line-height: 1rem;
+    }
 
-      /* SKILLS */
-      .skill-illustration img {
-          margin-top: 7rem;
-      }
-      .skill-box{
-          margin: auto;
-      }
-      .skill-box h3{
-          font-size: 1.5rem;
-          width: 10rem;
-          margin: 2.2rem auto;
-      }
-      .skill-box p{
-          font-size: 1.5rem;
-          width: 7rem;
-          margin: auto;
-          font-weight: 300;
-      }
-      .skill-front{
-          align-items: center;
-          width: 17rem;
-          margin: 0;
-      }
-      .skill-back{
-          align-items: center;
-          margin: 0;
-          width: 17rem;
-      }
-      .skill-front img, .skill-back img, .skill-framework img, .skill-tool img {
-          margin: 0 auto;
-          width: 4rem;
-          padding-top: 0.5rem;
-      }
-      .skill-framework{
-          align-items: center;
-          margin: 0;
-          width: 17rem;
-      }
-      .skill-framework .icon-bulma{
-          height: 3rem;
-          width: 7rem;
-      }
-      .skill-tool{
-          align-items: center;
-          justify-content: center;
-          margin: auto;
-          padding: 0;
-          width: 17rem;
-      }
-      /* PROJECT */
-      .project-illustration img {
-          margin-bottom: 5rem;
-        }
-        .project-content h3 {
-          font-size: 2.5rem;
-          margin: auto;
-          padding-bottom: 1rem;
-        }
-        .project-content .desc {
-          font-size: 1.5rem;
-          line-height: 2rem;
-          font-weight: 300;
-          width: 25rem;
-          text-align: center;
-          margin: auto;
-        }
-        .box-stack{
-            margin: 1rem auto;
-        }
-        .box-stack p {
-          padding: 0.5rem 1rem;
-          margin: auto 10px;
-          font-size: 1.3rem;
-        }
-        .box-link{
-          width: 100%;
-          margin: 0 auto;
-        }
-        .box-link img{
-            width: 3rem;
-            height: 3rem;
-            margin: auto;
-        }
-        .box-link a {
-          font-size: 1.15rem;
-          padding: 10px;
-          text-align: center;
-          margin: auto 10px;
-        }
-        .icon-merge{
-            left: 5px;
-        }
-        .icon-world{
-            left: 0;
-            
-        }
+    .hero-text img {
+        width: 4rem;
+    }
 
-        /* CONTACT */
 
-        .contact-header{
-            height: 33%;
-        }
-        .contact-header-title{
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
-        .contact-header-intro{
-            font-weight: 300;
-            margin-bottom: 10px;
-        }
-        .contact-box{
-            width: 100%;
-            margin: 0;
-        }
-        .contact-coordinates h3{
-            font-size: 2rem;
-        }
-        .box-mail p, 
-        .box-location p {
-            font-weight: 300;
-        }
-        .box-location img, 
-        .box-mail img{
-            width: 30px;
-        }
-        .contact-illustration{
-            display: none;
-        }
-        .contact-illustration img{
-            display: none;
-        }
+    .contact-illustration {
+        display: none;
+    }
+}
 
-        /* SCROLL-TOP */
-        #btn-top{
-            width: 2rem;
-            height: 3rem;
-            right: 3.2rem;
-            bottom: 4.5rem;
-        }
-        .index img {
-          position: absolute;
-          width: 2.5rem;
-          right: -1rem;
-          bottom: -0.5rem;
-        }
-  }
+@media only screen and (max-width: 50em) {
+
+    /**********************************************
+            *** HOME SECTION *** - START
+**********************************************/
+    .hero-text h1 {
+        font-size: 6.5rem;
+        line-height: 8rem;
+    }
+
+    .hero-text h2 {
+        font-size: 3.5rem;
+        line-height: 4rem;
+    }
+
+    .hero-text img {
+        width: 4rem;
+    }
+}
+
+@media only screen and (max-width: 44em) {
+
+    .hero-text h2 {
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 37.5em) {
+
+    .container {}
+
+    /**********************************************
+            *** NAVIGATION ***
+**********************************************/
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 2.5rem;
+    }
+
+    .navigation__item {
+        padding: 1rem 1rem;
+    }
+
+    .navigation__link {
+        font-size: 1.3rem;
+        font-weight: 300;
+    }
+
+    /**********************************************
+            *** HOME SECTION *** - START
+**********************************************/
+    .hero-text h1 {
+        font-size: 5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 80%;
+    }
+
+    .hero-text img {
+        width: 4rem;
+    }
+
+    .contact-illustration {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 37em) {
+    .hero-text h1 {
+        font-size: 3.5rem;
+        line-height: 5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 80%;
+        background: red;
+    }
+
+    .hero-text img {
+        width: 3rem;
+    }
+}
+
+@media only screen and (max-width: 30em) {
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 2rem;
+    }
+
+    .navigation__item {
+        padding: 1rem .5rem;
+    }
+
+    .navigation__link {
+        font-size: 1.3rem;
+        font-weight: 300;
+    }
+
+    .hero-text h1 {
+        font-size: 3.5rem;
+        line-height: 4.5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 2.8rem;
+        line-height: 3rem;
+    }
+
+    .hero-text img {
+        width: 3rem;
+    }
+
+}
+
+@media only screen and (max-width: 26.5625em) {
+    .container {}
+
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 1.4rem;
+    }
+
+    .navigation__item {
+        padding: 1rem .5rem;
+    }
+
+    .navigation__link {
+        font-size: 1.3rem;
+        font-weight: 300;
+    }
+
+    .hero-text h1 {
+        font-size: 3.5rem;
+        line-height: 4.5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+
+    .hero-text img {
+        width: 2.5rem;
+    }
+}
+
+@media only screen and (max-width: 23.4375em) {
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 1.4rem;
+    }
+
+    .navigation__item {
+        padding: 1rem .5rem;
+    }
+
+    .navigation__link {
+        font-size: 1rem;
+        font-weight: 300;
+    }
+
+    .hero-text h1 {
+        font-size: 3.5rem;
+        line-height: 4.5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+
+    .hero-text img {
+        width: 2.5rem;
+    }
+}
+
+
+@media only screen and (max-width: 20em) {
+    .navigation {}
+
+    .navigation__logo {
+        font-size: 1.4rem;
+    }
+
+    .navigation__item {
+        padding: 1rem .5rem;
+    }
+
+    .navigation__link {
+        font-size: .95rem;
+        font-weight: 300;
+    }
+
+    .hero-text h1 {
+        font-size: 3rem;
+        line-height: 4.5rem;
+    }
+
+    .hero-text h2 {
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+
+    .hero-text img {
+        width: 2.2rem;
+    }
+
+    #icon-arrow {
+        color: black;
+        height: 55px;
+        width: 55px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        bottom: 45px;
+        font-size: 5rem;
+        line-height: 8rem;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50%;
+        background: white;
+        box-shadow: 0 0 0 0 #fff;
+        z-index: 11;
+        animation: pulse 1.9s infinite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+
+    #icon-arrow:focus {
+        display: none;
+    }
+
+    .arrow {
+        width: 4rem;
+        height: 4rem;
+        margin-top: 5px;
+    }
 }
