--- a/css/mq.css
+++ b/css/mq.css
@@ -141,7 +141,9 @@
     /**********************************************
             *** NAVIGATION ***
 **********************************************/
-    .navigation {}
+    .navigation {
+        margin: 5px auto;
+    }
 
     .navigation__logo {
         font-size: 2.5rem;
