--- a/mqcopie.css
+++ b/mqcopie.css
@@ -55,7 +55,7 @@
         }
     }
 
-    /* @media (max-width: 425px) {
+     @media (max-width: 425px) {
 
         .about-illustration img {
             width: 25rem;
