--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 
 html {
   font-size: 62.5%;
-  /* font-family: 'Cabin', sans-serif; */
   font-family: 'Nunito', sans-serif;
 }
 
@@ -17,13 +16,14 @@ body {
   height: 100vh;
 }
 
-.container{
-    width: 80vw;
-    margin: auto;
+.container {
+  width: 89vw;
+  margin: auto;
+
 }
 
 /**********************************************
-            *** NAVIGATION ***
+              *** NAVIGATION ***
 **********************************************/
 
 .navigation {
@@ -36,61 +36,58 @@ body {
 
 }
 
-  .navigation__logo-box {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      height: 3.25rem;
-      font-weight: 900;
-  }
+.navigation__logo-box {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  height: 3.25rem;
+  font-weight: 900;
+}
 
-  .navigation__logo {
-      color: #fff;
-        text-decoration: none;
-        font-size: 3rem;
-        font-weight: 700;
-  }
+.navigation__logo {
+  color: #fff;
+  text-decoration: none;
+  font-size: 3rem;
+  font-weight: bold;
+}
 
-  .navigation__list-box {
-      display: flex;
-      justify-content: flex-end;
-      z-index: 1000;
-      max-width: 100%;
-      font-weight: 400;
-      /* width: 43%; */
-  }
+.navigation__list-box {
+  display: flex;
+  justify-content: flex-end;
+  z-index: 1000;
+  max-width: 100%;
+  font-weight: 400;
+}
 
-  .navigation__list {
-      list-style-type: none;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+.navigation__list {
+  list-style-type: none;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  }
+.navigation__item {
+  display: inline-block;
+  padding: 1rem 2rem;
+  align-items: center;
+  position: relative;
+  flex-shrink: 1;
+  text-align: center;
+  text-transform: capitalize;
+}
 
-  .navigation__item {
-      display: inline-block;
-      padding: 1rem 2rem;
-      align-items: center;
-      position: relative;
-      flex-shrink: 1;
-      text-align: center;
-      text-transform: capitalize;
-  }
-
-  .navigation__link {
-      text-decoration: none;
-      color: #fff;
-      font-size: 2.3rem;
-      flex-shrink: 1;
+.navigation__link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 2.3rem;
+  flex-shrink: 1;
 }
 
 .bord {
   display: inline-block;
   position: relative;
-
 }
 
 .bord::after {
@@ -113,7 +110,7 @@ body {
 
 
 /**********************************************
-            *** HOME SECTION *** - START
+          *** HOME SECTION *** - START
 **********************************************/
 
 .home {
@@ -127,12 +124,12 @@ body {
   flex-grow: 1;
   position: relative;
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 11;
-    max-width: 150rem;
-    margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 11;
+  max-width: 150rem;
+  margin: 0 auto;
 }
 
 .hero-text h1 {
@@ -185,14 +182,15 @@ body {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-#icon-arrow:focus{
+
+#icon-arrow:focus {
   display: none;
 }
 
 .arrow {
   width: 4rem;
   height: 4rem;
-  margin-top: 5px; 
+  margin-top: 5px;
 }
 
 @keyframes pulse {
@@ -237,42 +235,52 @@ body {
   width: 2rem;
   height: 2rem;
   background: rgba(255, 255, 255, 0.2);
-  animation: animate 25s linear infinite;
-  bottom: -150px;
+  animation: animate 15s linear infinite;
+  bottom: 150px;
+  ;
+  -webkit-animation: animate 15s linear infinite;
 }
 
 .circles li:nth-child(1) {
   left: 25%;
+  top: 100%;
   width: 8rem;
   height: 8rem;
-  animation-delay: 0s;
+  animation-delay: 1s;
+  animation-duration: 15s;
+
 }
 
 .circles li:nth-child(2) {
-  left: 10%;
-  width: 2rem;
-  height: 2rem;
-  animation-delay: 2s;
-  animation-duration: 12s;
+  left: 15%;
+  top: 100%;
+  width: 8rem;
+  height: 8rem;
+  animation-delay: 0s;
+  animation-duration: 15s;
 }
 
 .circles li:nth-child(3) {
   left: 70%;
-  width: 2rem;
-  height: 2rem;
+  top: 100%;
+  width: 8rem;
+  height: 8rem;
   animation-delay: 4s;
 }
 
 .circles li:nth-child(4) {
   left: 40%;
+  top: 100%;
   width: 6rem;
   height: 6rem;
   animation-delay: 0s;
   animation-duration: 18s;
+
 }
 
 .circles li:nth-child(5) {
   left: 65%;
+  top: 100%;
   width: 2rem;
   height: 2rem;
   animation-delay: 0s;
@@ -280,6 +288,7 @@ body {
 
 .circles li:nth-child(6) {
   left: 75%;
+  top: 100%;
   width: 10rem;
   height: 10rem;
   animation-delay: 3s;
@@ -287,6 +296,7 @@ body {
 
 .circles li:nth-child(7) {
   left: 63%;
+  top: 100%;
   width: 9rem;
   height: 9rem;
   animation-delay: 0s;
@@ -294,6 +304,7 @@ body {
 
 .circles li:nth-child(8) {
   left: 50%;
+  top: 100%;
   width: 2.5rem;
   height: 2.5rem;
   animation-delay: 15s;
@@ -301,16 +312,17 @@ body {
 }
 
 .circles li:nth-child(9) {
-  left: 20%;
-  width: 1.5rem;
-  height: 1.5rem;
-  ;
+  left: 18.5%;
+  top: 100%;
+  width: 3.5rem;
+  height: 3.5rem;
   animation-delay: 2s;
-  animation-duration: 35s;
+  animation-duration: 10s;
 }
 
 .circles li:nth-child(10) {
   left: 85%;
+  top: 100%;
   width: 6rem;
   height: 6rem;
   animation-delay: 0s;
@@ -319,71 +331,117 @@ body {
 
 .circles li:nth-child(11) {
   left: 70%;
-  width: 2rem;
-  height: 2rem;
-  animation-delay: 4s;
+  top: 100%;
+  width: 3rem;
+  height: 3rem;
+  animation-delay: 1s;
 }
 
 .circles li:nth-child(12) {
-  left: 35%;
-  width: 4rem;
-  height: 4rem;
-  animation-delay: 7s;
+  left: 30%;
+  top: 100%;
+  width: 8rem;
+  height: 8rem;
+  animation-delay: 5.5s;
 }
 
 .circles li:nth-child(13) {
-  left: 30%;
-  width: 2rem;
-  height: 2rem;
+  left: 35%;
+  top: 100%;
+  width: 5rem;
+  height: 5rem;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(14) {
+  left: 35%;
+  top: 100%;
+  width: 5rem;
+  height: 5rem;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(15) {
+  left: 35%;
+  top: 100%;
+  width: 5rem;
+  height: 5rem;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(16) {
+  left: 35%;
+  top: 100%;
+  width: 5rem;
+  height: 5rem;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(17) {
+  left: 35%;
+  top: 100%;
+  width: 5rem;
+  height: 5rem;
   animation-delay: 4s;
 }
 
 @keyframes animate {
 
   0% {
-    transform: translateY(0) rotate(0deg);
     opacity: 1;
-    border-radius: 0;
+    border-radius: 100%;
+    transform: translateY(0) rotate(0deg);
+    -webkit-transform: translateY(0) rotate(0deg);
+    -moz-transform: translateY(0) rotate(0deg);
+    -ms-transform: translateY(0) rotate(0deg);
+    -o-transform: translateY(0) rotate(0deg);
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
   }
 
   100% {
-    transform: translateY(-1000px) rotate(720deg);
     opacity: 0;
     border-radius: 100%;
+    transform: translateY(-1000px) rotate(720deg);
+    -webkit-transform: translateY(-1000px) rotate(720deg);
+    -moz-transform: translateY(-1000px) rotate(720deg);
+    -ms-transform: translateY(-1000px) rotate(720deg);
+    -o-transform: translateY(-1000px) rotate(720deg);
   }
-
 }
 
 /**********************************************
-            *** ABOUT ***
+                *** ABOUT ***
 **********************************************/
 
 .about {
-  min-height: calc(100vh - 20px);
-  width: 95%;
+  /* min-height: calc(100vh - 20px); */
+  width: 100%;
   display: flex;
   justify-content: center;
   margin: 0 auto;
   margin-top: 20px;
+
 }
 
-.about-content {
+.about__content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  flex-grow: 1;
+  width: 70%;
+  /* flex-shrink: 1; */
 }
 
-.about-content h1 {
+.about__content h1 {
+  font-size: 4.8rem;
   font-weight: 700;
-  max-width: 100%;
-  width: 90%;
-  height: 10rem;
-  margin: 14px auto;
-  text-align: left;
-  font-size: 4rem;
+  text-align: center;
   color: #191c1f;
+  margin: 1.4rem auto;
+  max-width: 80%;
 }
 
 .title-color {
@@ -394,15 +452,16 @@ body {
   border-bottom: 0.7rem solid #31859bff;
 }
 
-.about-content p {
-  max-width: 90%;
+.about__content p {
+  max-width: 100%;
   font-size: 2rem;
   line-height: 3.2rem;
   text-align: justify;
   font-weight: 400;
   color: #191c1f;
-  margin: 0 auto;
+  margin: 0 5rem;
   margin-top: 15px;
+
 }
 
 .highlith {
@@ -411,24 +470,23 @@ body {
   background-color: #b9e4fd;
 }
 
-.box-social {
+.about__box-social {
   display: flex;
   justify-content: center;
   max-width: 50%;
-  margin-top: 1rem;
 }
 
-.box social a {
+.about__box social a {
   display: none;
   color: green;
 }
 
-.box-social img {
+.about__box-social img {
   width: 5rem;
   margin: 0 2.5rem;
 }
 
-.box-social span {
+.about__box-social span {
   display: flex;
   justify-content: center;
   position: relative;
@@ -436,7 +494,7 @@ body {
 
 .desc-linkedin {
   position: absolute;
-  bottom: 0.2rem;
+  bottom: -0.2rem;
   left: 0.25rem;
   font-size: 1.5rem;
 }
@@ -464,25 +522,13 @@ body {
   transform: scale(1.2);
 }
 
-.about-illustration {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.about-illustration img {
-  width: 40vw;
-  height: auto;
-}
-
-.about-btn {
+.about__btn {
   display: flex;
   justify-content: center;
   margin-top: 0.5rem;
 }
 
-.about-btn a {
+.about__btn a {
   border-radius: 2.5rem;
   border: none;
   text-decoration: none;
@@ -493,9 +539,24 @@ body {
   background-color: #31859bff;
 }
 
-.about-btn a:hover {
+.about__btn a:hover {
   background-color: rgb(50, 157, 184);
   transition: background-color 0.4s;
+}
+
+.about__illustration {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 2rem;
+  max-width: 450rem;
+
+}
+
+.about__illustration img {
+  width: 100%;
+  height: 100%;
 }
 
 /**********************************************
@@ -508,6 +569,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
+
 }
 
 .skill__content {
@@ -580,7 +642,8 @@ body {
 
 .skill__box-tool .icon-bulma {
   height: auto;
-  width: 6.2rem;;
+  width: 6.2rem;
+  ;
 }
 
 .skill__illustration {
@@ -633,9 +696,7 @@ body {
 
 .project-content h3,
 .desc,
-.box-stack p {
-
-}
+.box-stack p {}
 
 .project-content h3 {
   font-size: 3rem;
@@ -810,7 +871,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .contact-coordinates h3 {
@@ -909,6 +970,7 @@ footer p {
   transition-timing-function: ease-in-out;
   transition-property: background-color, color;
 }
+
 .index img {
   width: 4rem;
 }
