--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ body {
 .container {
   width: 89vw;
   margin: auto;
-
 }
 
 /**********************************************
@@ -417,13 +416,13 @@ body {
 **********************************************/
 
 .about {
-  /* min-height: calc(100vh - 20px); */
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
-  margin-top: 20px;
-
+  max-height: 75rem;
+  height: 75rem;
 }
 
 .about__content {
@@ -432,7 +431,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 70%;
-  /* flex-shrink: 1; */
+  height: 55%;
 }
 
 .about__content h1 {
@@ -441,7 +440,7 @@ body {
   text-align: center;
   color: #191c1f;
   margin: 1.4rem auto;
-  max-width: 80%;
+  max-width: 100%;
 }
 
 .title-color {
@@ -454,20 +453,18 @@ body {
 
 .about__content p {
   max-width: 100%;
-  font-size: 2rem;
-  line-height: 3.2rem;
+  font-size: 1.7rem;
+  line-height: 2.5rem;
+  letter-spacing: .02rem;
   text-align: justify;
   font-weight: 400;
   color: #191c1f;
   margin: 0 5rem;
   margin-top: 15px;
-
 }
 
 .highlith {
-  border-radius: 5px;
-  padding: 0.1rem 0.3rem;
-  background-color: #b9e4fd;
+  color: #31859bff;
 }
 
 .about__box-social {
@@ -482,7 +479,7 @@ body {
 }
 
 .about__box-social img {
-  width: 5rem;
+  width: 4rem;
   margin: 0 2.5rem;
 }
 
@@ -501,9 +498,9 @@ body {
 
 .desc-github {
   position: absolute;
-  bottom: -0.2rem;
-  left: 0.25rem;
-  font-size: 1.5rem;
+  bottom: -0.3rem;
+  left: 0rem;
+  font-size: 1.6rem;
 }
 
 .logo-animated {
@@ -525,23 +522,26 @@ body {
 .about__btn {
   display: flex;
   justify-content: center;
-  margin-top: 0.5rem;
 }
 
 .about__btn a {
   border-radius: 2.5rem;
   border: none;
+  font-size: 1.55rem;
   text-decoration: none;
-  padding: 2rem;
-  margin: 2rem;
+  padding: 1rem 2rem;
+  margin: 1rem;
   color: #fff;
-  font-size: 1.65rem;
   background-color: #31859bff;
 }
 
 .about__btn a:hover {
   background-color: rgb(50, 157, 184);
   transition: background-color 0.4s;
+}
+
+.about__btn a:nth-child(1){
+  margin-left: 6rem;
 }
 
 .about__illustration {
@@ -551,7 +551,6 @@ body {
   align-items: center;
   margin: 0 2rem;
   max-width: 450rem;
-
 }
 
 .about__illustration img {
@@ -569,7 +568,6 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-
 }
 
 .skill__content {
