--- a/css/style.css
+++ b/css/style.css
@@ -950,7 +950,10 @@ footer p {
   font-size: 2rem;
 }
 
-/* TOP */
+/**********************************************
+            *** BTN TOP ***
+**********************************************/
+
 #btn-top {
   display: none;
   position: fixed;
