--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/**********************************************
+              *** GLOBAL ***
+**********************************************/
+
 *,
 *::before,
 *::after {
@@ -16,10 +20,16 @@ body {
   height: 100vh;
 }
 
-.container {
+main {
   width: 89vw;
   margin: auto;
 }
+
+/**********************************************
+              *** FONTS ***
+**********************************************/
+
+
 
 /**********************************************
               *** NAVIGATION ***
@@ -431,7 +441,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 70%;
-  height: 55%;
+  height: 60%;
 }
 
 .about__content h1 {
@@ -471,6 +481,7 @@ body {
   display: flex;
   justify-content: center;
   max-width: 50%;
+  margin-bottom: 1rem;
 }
 
 .about__box social a {
@@ -540,7 +551,7 @@ body {
   transition: background-color 0.4s;
 }
 
-.about__btn a:nth-child(1){
+.about__btn a:nth-child(1) {
   margin-left: 6rem;
 }
 
@@ -563,6 +574,148 @@ body {
 **********************************************/
 
 .skill {
+  width: 100%;
+  margin: auto;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.skill__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 45rem;
+  max-width: 60rem;
+  width: 100%;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+.skill__content-title {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.heading__primary {
+  display: flex;
+  justify-content: center;
+  font-size: 4.8rem;
+  border-bottom: .5rem solid #31859bff;
+  color: #191c1f;
+}
+
+.skill__content--box {
+  display: flex;
+  height: 22rem;
+  max-width: 53rem;
+  width: 100%;
+  position: relative;
+}
+
+.skill__content--stack {
+  font-family: 'Text Me One', sans-serif;
+  font-size: 1.8rem;
+  color: #191c1f;
+  position: absolute;
+  top: 3.5rem;
+  left: 5rem;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+
+.skill__content--stack:hover {
+  transform: scale(1.2);
+}
+
+.skill__content--stack:nth-child(1) {
+  font-family: 'Text Me One', sans-serif;
+  font-size: 1.8rem;
+  position: absolute;
+  top: 5rem;
+  left: 25rem;
+}
+
+.skill__content--stack:nth-child(2) {
+  font-family: 'Bahiana', sans-serif;
+  position: absolute;
+  top: 20rem;
+  left: 45rem;
+}
+
+.skill__content--stack:nth-child(3) {
+  font-family: 'Bahiana', sans-serif;
+  position: absolute;
+  top: 12rem;
+  left: 30rem;
+}
+
+.skill__content--stack:nth-child(4) {
+  font-family: 'Atomic Age', sans-serif;
+  position: absolute;
+  top: 20rem;
+  left: 15rem;
+}
+
+.skill__content--stack:nth-child(5) {
+  font-family: 'Text Me One', sans-serif;
+  position: absolute;
+  top: 15rem;
+  left: 5rem;
+}
+
+.skill__content--stack:nth-child(6) {
+  font-family: 'Major Mono Display', sans-serif;
+  position: absolute;
+  top: 17rem;
+  left: 35rem;
+}
+
+.skill__content--stack:nth-child(7) {
+  font-family: 'Atomic Age', sans-serif;
+  position: absolute;
+  top: 2rem;
+  left: 40rem;
+}
+
+.skill__content--stack:nth-child(8) {
+  font-family: 'Major Mono Display', sans-serif;
+  position: absolute;
+  top: 15rem;
+  left: 18rem;
+}
+
+.skill__content--stack:nth-child(9) {
+  font-family: 'Bahiana', sans-serif;
+  top: 3.5rem;
+  left: 5rem;
+}
+
+.skill__content--stack:nth-child(10) {
+  font-family: 'Atomic Age', sans-serif;
+  position: absolute;
+  top: 9rem;
+  left: 9rem;
+}
+
+.skill__content--stack:nth-child(11) {
+  font-family: 'Lato', sans-serif;
+  position: absolute;
+  top: 10rem;
+  left: 39rem;
+}
+
+
+
+
+
+/**********************************************
+            *** SKILL II ***
+**********************************************/
+
+/* .skill {
   max-width: 100%;
   margin: auto;
   min-height: 100vh;
@@ -574,7 +727,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* max-width: 100%; */
+   max-width: 100%; 
   height: 50rem;
   overflow-x: hidden;
   flex-grow: 9;
@@ -584,7 +737,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  /* margin: 0rem 5rem; */
+  margin: 0rem 5rem; 
   width: 100%;
   height: 100%;
 }
@@ -605,8 +758,8 @@ body {
   height: 45%;
   width: 100%;
   margin: 0 auto;
-  /* min-height: 20vh; */
-  /* padding: 0 5rem; */
+  min-height: 20
+  padding: 0 5r
 }
 
 .skill__box-picture {
@@ -656,7 +809,7 @@ body {
   width: 100%;
   max-width: 600px;
   min-width: 300px;
-}
+} */
 
 /**********************************************
             *** PROJECT ***
