--- a/css/mq.css
+++ b/css/mq.css
@@ -318,8 +318,7 @@
 
 
     .heading__primary {
-        font-size: 2.5rem;
-
+        font-size: 2rem;
     }
 
     .skill__content--box {}
@@ -393,6 +392,12 @@
 
     .about__illustration img {
         width: 30rem;
+    }
+
+    /* SKILLS */
+
+    .heading-primary{
+        font-size: 2.5rem;
     }
 }
 
@@ -728,6 +733,7 @@
         height: 30%;
     }
 
+    /* SKILL */
     .skill__content--stack:nth-child(1) {
         top: 4rem;
         left: 11rem;
@@ -786,9 +792,6 @@
 }
 
 @media only screen and (min-width: 10em) {
-    /* .skill {
-        display: none;
-    } */
 
     .project {
         display: none;
